--- a/WebRoot/bootstrap/css/bootstrap.css
+++ b/WebRoot/bootstrap/css/bootstrap.css
@@ -99,7 +99,7 @@ sub {
 }
 
 img {
-  width: auto\9;
+  width: auto;
   height: auto;
   max-width: 100%;
   vertical-align: middle;
@@ -5556,7 +5556,7 @@ input[type="submit"].btn.btn-mini {
 
 .thumbnail {
   display: block;
-  padding: 4px;
+  padding: 30px;
   line-height: 20px;
   border: 1px solid #ddd;
   -webkit-border-radius: 4px;
@@ -5581,7 +5581,8 @@ a.thumbnail:focus {
 
 .thumbnail > img {
   display: block;
-  max-width: 100%;
+  /* max-width: 100%; */
+  width:260px;height:153px;
   margin-right: auto;
   margin-left: auto;
 }
@@ -5984,9 +5985,9 @@ a.badge:focus {
 .carousel-inner > .item {
   position: relative;
   display: none;
-  -webkit-transition: 0.6s ease-in-out left;
-     -moz-transition: 0.6s ease-in-out left;
-       -o-transition: 0.6s ease-in-out left;
+  -webkit-transition: 0.6s ease-in-out left;/* Safari 和 Chrome */
+     -moz-transition: 0.6s ease-in-out left;/* 火狐 */
+       -o-transition: 0.6s ease-in-out left;/* Opera */
           transition: 0.6s ease-in-out left;
 }
 
